Name:                hs-crypto-cipher
Version:             0.0.9
Synopsis:            Generic cryptography cipher types
Description:         Generic cryptography cipher types
License:             BSD3
License-file:        LICENSE
Copyright:           Vincent Hanquez <vincent@snarc.org>
Author:              Vincent Hanquez <vincent@snarc.org>
Maintainer:          vincent@snarc.org
Category:            Cryptography
Stability:           experimental
Build-Type:          Simple
Homepage:            http://github.com/vincenthz/hs-crypto-cipher
Cabal-Version:       >=1.8
extra-source-files:  README.md

Library
  hs-source-dirs:   src, test
  Exposed-modules:   Crypto.Cipher.Types
  Other-modules:     Crypto.Cipher.Types.Base

  Build-depends:     base >= 4 && < 5
                   , bytestring
  ghc-options:       -Wall -fwarn-tabs

source-repository head
  type: git
  location: git://github.com/vincenthz/hs-crypto-cipher
  subdir: types

Test-Suite test-hs-crypto-cipher
  type:             exitcode-stdio-1.0
  hs-source-dirs:   src, test
  main-is:          Spec.hs
  build-depends:    base,
                    bytestring,
                    hspec >= 1.3,
                    QuickCheck >= 2.6,
                    hs-crypto-cipher
  cc-options:       -fPIC
  ld-options:       -fPIC
