Name:                crypto-cipher-types
Version:             0.0.9
Synopsis:            Generic cryptography cipher types
Description:         Generic cryptography cipher types
License:             BSD3
License-file:        LICENSE
Copyright:           Vincent Hanquez <vincent@snarc.org>
Author:              Vincent Hanquez <vincent@snarc.org>
Maintainer:          vincent@snarc.org
Category:            Cryptography
Stability:           experimental
Build-Type:          Simple
Homepage:            http://github.com/vincenthz/hs-crypto-cipher
Cabal-Version:       >=1.8
extra-source-files:  README.md

Library
  Exposed-modules:   Crypto.Cipher.Types
                   , Crypto.Cipher.Types.Unsafe
  Other-modules:     Crypto.Cipher.Types.GF
                   , Crypto.Cipher.Types.Block
                   , Crypto.Cipher.Types.BlockIO
                   , Crypto.Cipher.Types.Stream
                   , Crypto.Cipher.Types.OfIO
                   , Crypto.Cipher.Types.AEAD
                   , Crypto.Cipher.Types.Base
                   , Crypto.Cipher.Types.Utils
  Build-depends:     base >= 4 && < 5
                   , bytestring
                   , vector
                   , byteable >= 0.1.1
                   , securemem >= 0.1.1
  ghc-options:       -Wall -fwarn-tabs

source-repository head
  type: git
  location: git://github.com/vincenthz/hs-crypto-cipher
  subdir: types

Test-Suite test-raskell-git-download
  type:             exitcode-stdio-1.0
  hs-source-dirs:   ., tests
  main-is:          Spec.hs
  build-depends:    base,
                    bytestring,
                    vector,
                    byteable >= 0.1.1,
                    securemem >= 0.1.1,
                    hspec >= 1.3,
                    QuickCheck >= 2.6,

                    crypto-cipher-types
  cc-options:       -fPIC
  ld-options:       -fPIC
